go-build/triggers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-trigger-demo1
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: el-maven-trigger-listener.me
    http:
      paths:
      - backend:
          service:
            name: el-golang-demo1-trigger-listener
            port:
              number: 8080
        path: /golang-demo1
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: localhost
